syntax = "proto3";

import 'encrypted_personal_data.proto';
import 'subject.proto';

package com.acme;

message MissingEncryptedPersonalDataField {

  string uuid = 1 [(.com.github.gustavomonarin.gdpr.subject_identifier) = true];

  oneof personal_data {

    Contact contact = 2;

  }
}


message MultipleEncryptedPersonalDataField {

  string uuid1 = 1 [(.com.github.gustavomonarin.gdpr.subject_identifier) = true];

  oneof personal_data {

    Contact contact = 2;
    com.github.gustavomonarin.gdpr.EncryptedPersonalData encryptedPersonalData = 3;
    com.github.gustavomonarin.gdpr.EncryptedPersonalData anotherEncryptedPersonalData = 4;

  }

}

message Contact {
  string email = 1;
}